Alteração no caminho das imagens

--- a/Regressão Linear.ipynb
+++ b/Regressão Linear.ipynb
@@ -1198,7 +1198,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img width='700px' src='../Dados/img/Box-Plot.png'>"
+    "<img width='700px' src='Dados/img/Box-Plot.png'>"
    ]
   },
   {
@@ -1993,7 +1993,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img width='600px' src='../Dados/img/reg_01.jpg'>"
+    "<img width='600px' src='Dados/img/reg_01.jpg'>"
    ]
   },
   {
@@ -2279,7 +2279,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img width='600px' src='../Dados/img/reg_02.jpg'>"
+    "<img width='600px' src='Dados/img/reg_02.jpg'>"
    ]
   },
   {
@@ -2735,7 +2735,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img width='800px' src='../Dados/img/var_u.jpg'>\n",
+    "<img width='800px' src='Dados/img/var_u.jpg'>\n",
     "Fonte: Econometria Básica - 5ª edição - Gujarati e Porter"
    ]
   },
@@ -3408,7 +3408,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.1"
+   "version": "3.6.8"
   }
  },
  "nbformat": 4,
